--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
         <meta name="format-detection" content="telephone=yes">
-        <meta name="theme-color" content="#c41e3a">
+        <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
         <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
         <link rel="dns-prefetch" href="https://fonts.googleapis.com">
         <link rel="dns-prefetch" href="https://fonts.gstatic.com">
         <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
@@ -25,7 +28,10 @@
         <meta name="author" content="Susin Group">
         <meta name="geo.region" content="IN-TN">
         <link rel="canonical" href="https://www.susingroup.com/contact.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/contact.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/contact.html">
         <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
 
         <!-- Performance hints -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
