--- a/global-presence/susin-itork-qatar.html
+++ b/global-presence/susin-itork-qatar.html
@@ -8,12 +8,16 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
     <meta name="msapplication-TileColor" content="#c41e3a">
     <meta name="msapplication-navbutton-color" content="#c41e3a">
+        <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
     <link rel="apple-touch-icon" href="../assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
     <title>Susin Qatar WLL | Global Presence | Qatar Operations</title>
     <meta name="description" content="Susin Qatar Trading & Contracting WLL - Leading valve automation provider in Qatar (Doha). ✓ Pneumatic Actuators ✓ Power Industry Specialist ✓ Kahramaa Approved">
     <meta name="keywords" content="susin qatar, valve automation qatar, actuators doha, kahramaa approved, industrial automation qatar, power industry qatar">
@@ -31,7 +35,10 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="../logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
     <link rel="canonical" href="https://www.susingroup.com/global-presence/susin-itork-qatar.html">
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/global-presence/susin-itork-qatar.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/global-presence/susin-itork-qatar.html">
     
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
