--- a/industries-served.html
+++ b/industries-served.html
@@ -6,10 +6,12 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
     <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
     <meta property="og:site_name" content="Susin Group">
     <meta name="twitter:site" content="@susingroup">
     <meta name="twitter:creator" content="@susingroup">
@@ -20,7 +22,10 @@
     <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
     <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/industries-served.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/industries-served.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/industries-served.html">
     <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
