--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -8,11 +8,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
     <meta name="msapplication-TileColor" content="#c41e3a">
     <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
     <title>About Susin Group — Industrial Actuators & Gearboxes</title>
     <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide since 1992. ✓ ISO 9001:2015 Certified ✓ 32+ Years Experience ✓ Global Presence in India, UAE & Qatar">
     <meta name="keywords" content="about us, industrial actuators, gearboxes, motion control, manufacturer, company history, mission values, ISO 9001 certification, valve automation, actuator supplier, pneumatic actuators, hydraulic actuators">
@@ -20,7 +23,10 @@
     <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
     <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/about-industrial-actuators.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/about-industrial-actuators.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/about-industrial-actuators.html">
     <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
 
     <!-- Performance hints -->
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
