--- a/careers.html
+++ b/careers.html
@@ -8,11 +8,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
     <meta name="msapplication-TileColor" content="#c41e3a">
     <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
     <title>Careers at Susin Group | 10+ Open Positions in Valve Automation | Coimbatore</title>
     <meta name="description" content="Join Susin Group's 32-year legacy in valve automation. 10+ open positions: HR, Engineering, Quality, Sales, Production. Global exposure in India, UAE & Qatar. Competitive benefits, talent development programs. Apply now! Contact: +91 709 444 5352">
     <meta name="keywords" content="susin group careers, valve automation jobs, coimbatore engineering jobs, design engineer jobs, quality inspector jobs, application engineer, HR jobs coimbatore, purchase engineer, automation engineer, talent development, global exposure jobs, manufacturing jobs india, mechanical engineer jobs, production jobs, sales engineer jobs, career opportunities">
@@ -21,6 +24,8 @@
     <meta name="language" content="English">
     <meta name="geo.region" content="IN-TN">
     <link rel="canonical" href="https://www.susingroup.com/careers.html">
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/careers.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/careers.html">
     <meta property="og:title" content="Career Opportunities at Susin Group | 10+ Open Positions">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Join our 32-year legacy in valve automation. Global exposure, talent development programs, competitive benefits. Engineering, HR, Quality, Sales roles available.">
