--- a/global-presence/susin-itork-uae.html
+++ b/global-presence/susin-itork-uae.html
@@ -8,12 +8,16 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
     <meta name="msapplication-TileColor" content="#c41e3a">
     <meta name="msapplication-navbutton-color" content="#c41e3a">
+        <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
     <link rel="apple-touch-icon" href="../assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
     <title>Susin I-Tork UAE | Global Presence | Middle East Operations Center</title>
     <meta name="description" content="Susin I-Tork ME FZC - Leading valve automation distributor in UAE (Sharjah). ✓ Pneumatic & Electric Actuators ✓ Technical Support ✓ Fast Delivery across Middle East">
     <meta name="keywords" content="susin itork uae, valve automation uae, actuators sharjah, industrial automation middle east, pneumatic actuators dubai, susin middle east">
@@ -31,7 +35,10 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="../logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
     <link rel="canonical" href="https://www.susingroup.com/global-presence/susin-itork-uae.html">
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/global-presence/susin-itork-uae.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/global-presence/susin-itork-uae.html">
     
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
