--- a/products.html
+++ b/products.html
@@ -8,11 +8,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+        <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+        <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
         <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
         <title>Industrial Actuators & Gearboxes Products | Pneumatic, Hydraulic & Electrical | Susin Group</title>
         <meta name="description" content="Complete range of industrial actuators & gearboxes: Pneumatic Scotch Yoke, electro-hydraulic, electrical actuators for automation. Spring return & double acting models. ✓ Custom Solutions ✓ 32+ Years Experience ✓ Global Support ✓ ISO 9001 Certified">
         <meta name="keywords" content="pneumatic actuators, scotch yoke actuators, spring return actuators, double acting actuators, mechanical gearboxes, worm gearboxes, bevel gearboxes, electro-hydraulic actuators, electrical actuators, valve actuators, quarter turn actuators, multi-turn actuators, rotary actuators, linear actuators, fail-safe actuators, explosion proof actuators, industrial automation, motion control">
@@ -20,7 +23,10 @@
         <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
         <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/products.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/products.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/products.html">
         <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
 
         <!-- Performance hints -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
