--- a/resources.html
+++ b/resources.html
@@ -8,11 +8,14 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="theme-color" content="#c41e3a">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+        <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+        <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
         <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
         <title>Technical Resources & Downloads | Actuator Datasheets, Manuals | Susin Group</title>
         <meta name="description" content="Free technical resources: actuator datasheets, installation manuals, operation & maintenance guides, sizing programs, CAD drawings & technical specifications. ✓ Instant Downloads ✓ Technical Support ✓ Product Selection Tools ✓ 2D/3D CAD Files">
         <meta name="keywords" content="actuator datasheets, technical documentation, installation manuals, sizing programs, CAD drawings, product selection, FAQs, technical resources, downloads, operation manuals, maintenance guides, 2D drawings, 3D models, torque calculations, product catalogs, spec sheets">
@@ -20,7 +23,10 @@
         <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
         <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/resources.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/resources.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/resources.html">
         <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
 
         <!-- Performance hints -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
