--- a/services.html
+++ b/services.html
@@ -270,9 +270,9 @@
         <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
-                <span class="highlight-badge">
-                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+            <div class="hero-highlights">
+                <span class="highlight-item">
+                    <i class="fas fa-certificate"></i>
                     ISO 9001:2015 Quality
                 </span>
                 <span class="highlight-badge">
@@ -303,10 +303,10 @@
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-wrench"></i></div>
                 <h2>Installation & Commissioning</h2>
-                <div class="product-specs" style="margin: 1rem 0;">
-                    <div class="spec-item"><i class="fas fa-certificate" style="color: #c41e3a; width: 20px;"></i> ISO 9001 Certified Field Services</div>
-                    <div class="spec-item"><i class="fas fa-globe" style="color: #c41e3a; width: 20px;"></i> 100+ Countries Worldwide Coverage</div>
-                    <div class="spec-item"><i class="fas fa-user-check" style="color: #c41e3a; width: 20px;"></i> Factory-Trained Technicians</div>
+                <div class="product-specs">
+                    <div class="spec-item"><i class="fas fa-certificate"></i> ISO 9001 Certified Field Services</div>
+                    <div class="spec-item"><i class="fas fa-globe"></i> 100+ Countries Worldwide Coverage</div>
+                    <div class="spec-item"><i class="fas fa-user-check"></i> Factory-Trained Technicians</div>
                 </div>
                 <p>Our expert technicians provide professional installation and commissioning services to ensure your actuators and gearboxes are properly integrated into your systems. We handle everything from site preparation to final testing and validation according to international standards (API, ISO, ATEX).</p>
                 <ul>
@@ -321,10 +321,10 @@
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-tools"></i></div>
                 <h2>Maintenance & Support</h2>
-                <div class="product-specs" style="margin: 1rem 0;">
-                    <div class="spec-item"><i class="fas fa-clock" style="color: #c41e3a; width: 20px;"></i> 24/7 Emergency Response</div>
-                    <div class="spec-item"><i class="fas fa-headset" style="color: #c41e3a; width: 20px;"></i> <4 Hour Response SLA</div>
-                    <div class="spec-item"><i class="fas fa-box" style="color: #c41e3a; width: 20px;"></i> Genuine OEM Spare Parts</div>
+                <div class="product-specs">
+                    <div class="spec-item"><i class="fas fa-clock"></i> 24/7 Emergency Response</div>
+                    <div class="spec-item"><i class="fas fa-headset"></i> <4 Hour Response SLA</div>
+                    <div class="spec-item"><i class="fas fa-box"></i> Genuine OEM Spare Parts</div>
                 </div>
                 <p>Comprehensive after-sales support including preventive maintenance, repairs, and troubleshooting. Our service team ensures maximum uptime and optimal performance of your equipment with predictive maintenance programs and rapid response.</p>
                 <ul>
@@ -339,10 +339,10 @@
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-graduation-cap"></i></div>
                 <h2>Training Programs</h2>
-                <div class="product-specs" style="margin: 1rem 0;">
-                    <div class="spec-item"><i class="fas fa-award" style="color: #c41e3a; width: 20px;"></i> Industry-Recognized Certification</div>
-                    <div class="spec-item"><i class="fas fa-chalkboard-teacher" style="color: #c41e3a; width: 20px;"></i> Hands-On Practical Training</div>
-                    <div class="spec-item"><i class="fas fa-book" style="color: #c41e3a; width: 20px;"></i> Comprehensive Training Materials</div>
+                <div class="product-specs">
+                    <div class="spec-item"><i class="fas fa-award"></i> Industry-Recognized Certification</div>
+                    <div class="spec-item"><i class="fas fa-chalkboard-teacher"></i> Hands-On Practical Training</div>
+                    <div class="spec-item"><i class="fas fa-book"></i> Comprehensive Training Materials</div>
                 </div>
                 <p>Comprehensive training programs for your team covering operation, maintenance, and troubleshooting of our products. Available on-site or at our facilities with certification upon completion.</p>
                 <ul>
@@ -443,7 +443,7 @@
                         <li><i class="fas fa-envelope"></i> info@susin.in</li>
                         <li><i class="fas fa-map-marker-alt"></i> Coimbatore - 641 022, INDIA</li>
                     </ul>
-                    <div class="social-media" style="margin-top: 1.5rem;">
+                    <div class="social-media">
                         <a href="https://www.linkedin.com/company/susin-group" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://www.facebook.com/susingroup" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/susingroup" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
