--- a/resources.html
+++ b/resources.html
@@ -374,9 +374,9 @@
                         <i class="fas fa-calculator"></i>
                         <h3>Pneumatic Actuator Sizing Program</h3>
                         <p>Calculate the correct pneumatic actuator size based on valve torque requirements, operating pressure, and application parameters. This tool helps you select the optimal PDS or HD series actuator.</p>
-                        <div style="margin-top: 1.5rem;">
+                        <div class="sizing-tool-content">
                             <strong>Features:</strong>
-                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                            <ul class="sizing-tool-list">
                                 <li>Torque calculation based on valve size and type</li>
                                 <li>Operating pressure optimization</li>
                                 <li>Safety factor recommendations</li>
@@ -393,9 +393,9 @@
                         <i class="fas fa-cogs"></i>
                         <h3>Gearbox Sizing Program</h3>
                         <p>Determine the appropriate gearbox size and ratio for your application. Calculate torque requirements, speed reduction, and efficiency for ITG series mechanical worm gear actuators.</p>
-                        <div style="margin-top: 1.5rem;">
+                        <div class="sizing-tool-content">
                             <strong>Features:</strong>
-                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                            <ul class="sizing-tool-list">
                                 <li>Gear ratio calculation</li>
                                 <li>Torque capacity analysis</li>
                                 <li>Efficiency optimization</li>
