--- a/index.html
+++ b/index.html
@@ -1100,9 +1100,9 @@
                     </div>
                     <h4>Water & Wastewater</h4>
                     <p>Municipal water treatment, desalination plants, and industrial wastewater management systems with corrosion-resistant solutions</p>
-                    <ul class="industry-highlights" style="list-style: none; padding: 0; margin-top: 0.75rem; font-size: 0.85rem; color: #666;">
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>IP67/68 Submersible Rated</li>
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>NSF-61 Drinking Water Safe</li>
+                    <ul class="industry-highlights">
+                        <li><i class="fas fa-check"></i>IP67/68 Submersible Rated</li>
+                        <li><i class="fas fa-check"></i>NSF-61 Drinking Water Safe</li>
                     </ul>
                 </div>
                 <div class="industry-item">
@@ -1114,9 +1114,9 @@
                     </div>
                     <h4>Power Generation</h4>
                     <p>Thermal, nuclear, combined cycle, and renewable energy plants requiring high-reliability automation for critical safety systems</p>
-                    <ul class="industry-highlights" style="list-style: none; padding: 0; margin-top: 0.75rem; font-size: 0.85rem; color: #666;">
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>High-Temperature Rated</li>
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>Seismic Qualified</li>
+                    <ul class="industry-highlights">
+                        <li><i class="fas fa-check"></i>High-Temperature Rated</li>
+                        <li><i class="fas fa-check"></i>Seismic Qualified</li>
                     </ul>
                 </div>
                 <div class="industry-item">
@@ -1128,9 +1128,9 @@
                     </div>
                     <h4>Chemical & Petrochemical</h4>
                     <p>Process control, batch operations, and hazardous area applications with materials resistant to aggressive chemicals</p>
-                    <ul class="industry-highlights" style="list-style: none; padding: 0; margin-top: 0.75rem; font-size: 0.85rem; color: #666;">
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>316 SS & Exotic Alloys</li>
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>NACE MR0175 Compliant</li>
+                    <ul class="industry-highlights">
+                        <li><i class="fas fa-check"></i>316 SS & Exotic Alloys</li>
+                        <li><i class="fas fa-check"></i>NACE MR0175 Compliant</li>
                     </ul>
                 </div>
                 <div class="industry-item">
@@ -1142,9 +1142,9 @@
                     </div>
                     <h4>Marine & Offshore</h4>
                     <p>FPSO, drilling platforms, subsea systems, and shipboard applications demanding extreme reliability in harsh conditions</p>
-                    <ul class="industry-highlights" style="list-style: none; padding: 0; margin-top: 0.75rem; font-size: 0.85rem; color: #666;">
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>DNV-GL Marine Certified</li>
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>Salt Spray Tested</li>
+                    <ul class="industry-highlights">
+                        <li><i class="fas fa-check"></i>DNV-GL Marine Certified</li>
+                        <li><i class="fas fa-check"></i>Salt Spray Tested</li>
                     </ul>
                 </div>
                 <div class="industry-item">
@@ -1156,14 +1156,14 @@
                     </div>
                     <h4>Pharmaceutical & Food</h4>
                     <p>Hygienic design actuators meeting strict FDA, 3-A, and EHEDG standards for cleanroom and sterile manufacturing</p>
-                    <ul class="industry-highlights" style="list-style: none; padding: 0; margin-top: 0.75rem; font-size: 0.85rem; color: #666;">
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>3-A Sanitary Standards</li>
-                        <li><i class="fas fa-check" style="color: #4CAF50; margin-right: 0.5rem;"></i>CIP/SIP Compatible</li>
+                    <ul class="industry-highlights">
+                        <li><i class="fas fa-check"></i>3-A Sanitary Standards</li>
+                        <li><i class="fas fa-check"></i>CIP/SIP Compatible</li>
                     </ul>
                 </div>
             </div>
-            <div class="text-center" style="margin-top: 3rem;">
-                <a href="industries.html" class="btn btn-primary" style="padding: 1rem 2.5rem; font-size: 1.05rem;">Explore All Industry Solutions</a>
+            <div class="text-center">
+                <a href="industries.html" class="btn btn-primary">Explore All Industry Solutions</a>
             </div>
         </div>
     </section>
@@ -1198,14 +1198,14 @@
     </section>
 
     <!-- Trusted by Leading Organizations -->
-    <section class="customers-section" aria-labelledby="customers-heading" style="padding: 5rem 0; background: #fff;">
+    <section class="customers-section" aria-labelledby="customers-heading">
         <div class="container">
-            <h2 id="customers-heading" class="section-title" style="text-align: center; margin-bottom: 1rem;">Trusted by Leading Organizations Worldwide</h2>
-            <p style="text-align: center; max-width: 700px; margin: 0 auto 3rem auto; color: #666; font-size: 1.1rem;">
+            <h2 id="customers-heading" class="section-title">Trusted by Leading Organizations Worldwide</h2>
+            <p>
                 Our actuators and motion control solutions are trusted by major corporations across power generation, oil & gas, and industrial automation sectors globally.
             </p>
             
-            <div class="customers-logos" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 2rem; align-items: center; max-width: 1200px; margin: 0 auto;">
+            <div class="customers-logos">
                 <!-- BHEL -->
                 <div class="customer-logo" style="display: flex; align-items: center; justify-content: center; padding: 1.5rem; background: #f8f9fa; border-radius: 12px; transition: transform 0.3s, box-shadow 0.3s; cursor: pointer;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
                     <div style="text-align: center;">
