--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -385,17 +385,17 @@
     <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+            <div class="hero-highlights">
                 <span class="highlight-badge">
-                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-certificate"></i>
                     ISO 9001:2015 & API Certified
                 </span>
                 <span class="highlight-badge">
-                    <i class="fas fa-shield-alt" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-shield-alt"></i>
                     ATEX Zone 1 & 2 • SIL 2/3
                 </span>
                 <span class="highlight-badge">
-                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-globe"></i>
                     ISO 5211 Compliant
                 </span>
             </div>
@@ -414,20 +414,20 @@
     <!-- Pneumatic Actuators Overview -->
     <section id="pneumatic" class="product-section">
         <div class="container">
-            <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
-                <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Pneumatic Actuators</h2>
-                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
-                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+            <div class="section-header">
+                <h2>Pneumatic Actuators</h2>
+                <p>World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
+                <div class="hero-highlights">
                     <span class="highlight-badge">
-                        <i class="fas fa-fire" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-fire"></i>
                         10,000+ Installations
                     </span>
                     <span class="highlight-badge">
-                        <i class="fas fa-award" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-award"></i>
                         ATEX & SIL3 Certified
                     </span>
                     <span class="highlight-badge">
-                        <i class="fas fa-cog" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-cog"></i>
                         Torque: 10 Nm - 120,867 Nm
                     </span>
                 </div>
@@ -780,17 +780,17 @@
     </section>
 
     <!-- Pneumatic Actuators FAQ Section -->
-    <section class="product-section" style="background: #f8f9fa; padding: 3rem 0;">
+    <section class="product-section faq-section">
         <div class="container">
-            <h2 style="text-align: center; margin-bottom: 2rem; color: #1a2942;">Frequently Asked Questions</h2>
-            <div style="max-width: 900px; margin: 0 auto;">
-                <div style="background: white; padding: 1.5rem; margin-bottom: 1rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-                    <h4 style="color: #2c5aa0; margin-bottom: 0.5rem;"><i class="fas fa-question-circle"></i> What are the main advantages of pneumatic actuators?</h4>
-                    <p style="color: #666; margin: 0;">Pneumatic actuators are simple, reliable, and provide fast response times with high force output using compressed air. They are well-suited for hazardous environments since they do not use electricity, making them intrinsically safe.</p>
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-container">
+                <div class="faq-item-box">
+                    <h4><i class="fas fa-question-circle"></i> What are the main advantages of pneumatic actuators?</h4>
+                    <p>Pneumatic actuators are simple, reliable, and provide fast response times with high force output using compressed air. They are well-suited for hazardous environments since they do not use electricity, making them intrinsically safe.</p>
                 </div>
-                <div style="background: white; padding: 1.5rem; margin-bottom: 1rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-                    <h4 style="color: #2c5aa0; margin-bottom: 0.5rem;"><i class="fas fa-question-circle"></i> What is the difference between double acting and spring return actuators?</h4>
-                    <p style="color: #666; margin: 0;">Double acting actuators use air pressure for both opening and closing the valve, providing precise control in both directions. Spring return actuators use air pressure to open and a spring mechanism to return the valve to its default position when air pressure is lost, providing fail-safe operation.</p>
+                <div class="faq-item-box">
+                    <h4><i class="fas fa-question-circle"></i> What is the difference between double acting and spring return actuators?</h4>
+                    <p>Double acting actuators use air pressure for both opening and closing the valve, providing precise control in both directions. Spring return actuators use air pressure to open and a spring mechanism to return the valve to its default position when air pressure is lost, providing fail-safe operation.</p>
                 </div>
                 <div style="background: white; padding: 1.5rem; margin-bottom: 1rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     <h4 style="color: #2c5aa0; margin-bottom: 0.5rem;"><i class="fas fa-question-circle"></i> Are your pneumatic actuators suitable for hazardous areas?</h4>
