--- a/products.html
+++ b/products.html
@@ -385,17 +385,17 @@
         <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+            <div class="hero-highlights">
                 <span class="highlight-badge">
-                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-certificate"></i>
                     ISO 9001:2015 & API Certified
                 </span>
                 <span class="highlight-badge">
-                    <i class="fas fa-shield-alt" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-shield-alt"></i>
                     ATEX Zone 1 & 2 • SIL 2/3
                 </span>
                 <span class="highlight-badge">
-                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    <i class="fas fa-globe"></i>
                     ISO 5211 Compliant
                 </span>
             </div>
@@ -414,20 +414,20 @@
     <!-- Pneumatic Actuators Overview -->
     <section id="pneumatic" class="product-section">
         <div class="container">
-            <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
-                <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Pneumatic Actuators</h2>
-                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
-                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+            <div class="section-header">
+                <h2>Pneumatic Actuators</h2>
+                <p>World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
+                <div class="hero-highlights">
                     <span class="highlight-badge">
-                        <i class="fas fa-fire" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-fire"></i>
                         10,000+ Installations
                     </span>
                     <span class="highlight-badge">
-                        <i class="fas fa-award" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-award"></i>
                         ATEX & SIL3 Certified
                     </span>
                     <span class="highlight-badge">
-                        <i class="fas fa-cog" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        <i class="fas fa-cog"></i>
                         Torque: 10 Nm - 120,867 Nm
                     </span>
                 </div>
