--- a/careers.html
+++ b/careers.html
@@ -1,3 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Susin Group">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
+    <meta name="msapplication-TileColor" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <title>Careers at Susin Group | 10+ Open Positions in Valve Automation | Coimbatore</title>
+    <meta name="description" content="Join Susin Group's 32-year legacy in valve automation. 10+ open positions: HR, Engineering, Quality, Sales, Production. Global exposure in India, UAE & Qatar. Competitive benefits, talent development programs. Apply now! Contact: +91 709 444 5352">
+    <meta name="keywords" content="susin group careers, valve automation jobs, coimbatore engineering jobs, design engineer jobs, quality inspector jobs, application engineer, HR jobs coimbatore, purchase engineer, automation engineer, talent development, global exposure jobs, manufacturing jobs india, mechanical engineer jobs, production jobs, sales engineer jobs, career opportunities">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
+    <meta name="geo.region" content="IN-TN">
+    <link rel="canonical" href="https://www.susingroup.com/careers.html">
+    <link rel="alternate" hreflang="en" href="https://www.susingroup.com/careers.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/careers.html">
+    <meta property="og:title" content="Career Opportunities at Susin Group | 10+ Open Positions">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Join our 32-year legacy in valve automation. Global exposure, talent development programs, competitive benefits. Engineering, HR, Quality, Sales roles available.">
+    <meta property="og:url" content="https://www.susingroup.com/careers.html">
+    <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Careers at Susin Group - Join Our Team">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="Careers at Susin Group | 10+ Open Positions">
+    <meta name="twitter:description" content="Join our 32-year legacy. ✓ Global Exposure ✓ Talent Development Programs">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="Careers at Susin Group - Join Our Team">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="js/main.js" as="script">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'" crossorigin>
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
+    <link rel="icon" href="logo.jpg">
+</head>
 <body>
 
 <!-- 
@@ -762,5 +818,6 @@
     });
     </script>
     <script src="js/main.js" defer></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
