--- a/global-presence/susin-itork-india.html
+++ b/global-presence/susin-itork-india.html
@@ -33,6 +33,7 @@
     <link rel="preload" href="../css/style.css" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/navigation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="../logo.jpg">
         <link rel="manifest" href="site.webmanifest">
